k8s/util-dev/ingress-poly-dev.yaml

# k8s/ingress-demo.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polybot
spec:
  tls:
  - hosts:
    - danielms-aws-project.int-devops.click
    # This assumes tls-secret exists and the SSL
    # certificate contains a CN for foo.bar.com
    secretName: tls-secret

  rules:
  - host: danielms-aws-project.int-devops.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: polybot
            port:
              number: 8443
  ingressClassName: nginx
